--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <ul>
       <li><a href="#Animais">Animais</a></li>
       <li><a href="#Faq">Faq</a></li>
-      <li><a href="#Contato">Contato</a></li>
-      <li><a href="#Dev">Dev ➡️</a></li>
+      <li><a href="#contato">Contato</a></li>
+      <li><a href="#Dev">Dev =></a></li>
     </ul>
   </nav>
 
@@ -90,6 +90,36 @@
 
     </div>
   </section>
+
+  <section class="grid-sectio faq" id="faq">
+    <h1>FAQ</h1>
+    <dl>
+      <dt>Qual a idade dos animais?</dt>
+      <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+      <dt>Eles são fantásticos?</dt>
+      <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+      <dt>Qual a diferença?</dt>
+      <dd>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</dd>
+      <dt>Como proteger?</dt>
+      <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
+    </dl>
+  </section>
+
+  <section class="grid-contato contato" id="contato">
+    <h1>Contato</h1>
+    <div class="mapa">
+      <img src="./img/mapa.png" alt="">
+    </div>
+    <ul class="dados">
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet .</li>
+      <li>Lorem ipsum dolor sit.</li>
+    </ul>
+  </section>
+
+  <footer class="copy">
+    <h2>todos os direitos reservados</h2>
+  </footer>
   <script src="app.js"></script>
 </body>
 
