--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       Animais Fanásticos
     </h1>
 
-    <ul>
+    <ul class="animais-lista">
       <li>
         <img src="./img/imagem1.jpg">
       </li>
@@ -91,7 +91,7 @@
     </div>
   </section>
 
-  <section class="grid-sectio faq" id="faq">
+  <section class="grid-section faq" id="faq">
     <h1>FAQ</h1>
     <dl>
       <dt>Qual a idade dos animais?</dt>
