finalização do html e css do projeto

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </dl>
   </section>
 
-  <section class="grid-contato contato" id="contato">
+  <section class="grid-section contato" id="contato">
     <h1 class="titulo">Contato</h1>
     <div class="mapa">
       <img src="./img/mapa.png" alt="">
@@ -118,7 +118,7 @@
   </section>
 
   <footer class="copy">
-    <h2>todos os direitos reservados</h2>
+    <p>todos os direitos reservados</p>
   </footer>
   <script src="app.js"></script>
 </body>
