aprendeizado de js, nota para o que aprendhoje: ndi hj

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li><a href="#Animais">Animais</a></li>
       <li><a href="#Faq">Faq</a></li>
       <li><a href="#contato">Contato</a></li>
-      <li><a href="#Dev">Dev =></a></li>
+      <li><a href="https://google.com.br">Dev =></a></li>
     </ul>
   </nav>
 
