--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animais Fantásticos</title>
   <link rel="stylesheet" href="./css/style.css">
+  <script>
+    document.documentElement.className += ' js'</script>
 </head>
 
 <body>
@@ -23,7 +25,7 @@
       Animais Fanásticos
     </h1>
 
-    <ul class="animais-lista">
+    <ul class="animais-lista js-tabmenu">
       <li>
         <img src="./img/imagem1.jpg">
       </li>
@@ -44,7 +46,7 @@
       </li>
     </ul>
 
-    <div class="animais-descricao">
+    <div class="animais-descricao js-tabcontent">
       <section>
         <h2>Raposa</h2>
         <p>As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.</p>
