js scroll suave para links internos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav class="menu">
+  <nav class="menu js-menu">
     <ul>
       <li><a href="#Animais">Animais</a></li>
       <li><a href="#Faq">Faq</a></li>
@@ -93,7 +93,7 @@
     </div>
   </section>
 
-  <section class="grid-section faq" id="faq">
+  <section class="grid-section faq" id="Faq">
     <h1 class="titulo">FAQ</h1>
     <dl class="faq-lista js-accordion">
       <dt>Qual a idade dos animais?</dt>
