--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
   </nav>
 
-  <section class="grid-section animais" id="Animais">
+  <section class="grid-section animais js-scroll" id="Animais">
     <h1 class="titulo">
       Animais Fanásticos
     </h1>
@@ -93,7 +93,7 @@
     </div>
   </section>
 
-  <section class="grid-section faq" id="Faq">
+  <section class="grid-section faq js-scroll" id="Faq">
     <h1 class="titulo">FAQ</h1>
     <dl class="faq-lista js-accordion">
       <dt>Qual a idade dos animais?</dt>
@@ -107,7 +107,7 @@
     </dl>
   </section>
 
-  <section class="grid-section contato" id="contato">
+  <section class="grid-section contato js-scroll" id="contato">
     <h1 class="titulo">Contato</h1>
     <div class="mapa">
       <img src="./img/mapa.png" alt="">
