--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <footer class="copy">
     <p>todos os direitos reservados</p>
   </footer>
-  <script src="app.js"></script>
+  <script src="object.js"></script>
 </body>
 
 </html>
